# marci-ludibrium-rustis

./: .gitmodules  README.md
domret/: Cargo.toml
domret/src/: main.rs
years-first-day-in-week-rust/: Cargo.toml  first_weekdays.yaml
years-first-day-in-week-rust/src/: main.rs
